--- a/software.html
+++ b/software.html
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1792441'>Job Application for Software Engineer- Backend Python at Fuze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1792441'>Job Application for Software Engineer- Backend Python at Fuze</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -189,7 +189,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ncu/job/ovyDafwA'>Northcentral University Careers - Jr. Software Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ncu/job/ovyDafwA'>Northcentral University Careers - Jr. Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -205,7 +205,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oE7O9fws&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nuWcWLwO'>Gigamon Careers - Staff Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oE7O9fws&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nuWcWLwO'>Gigamon Careers - Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -285,7 +285,7 @@
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/d7bf0786-8218-4d2b-b41b-ef97b56214a0'>Fanatics - Software Engineer # 5244</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/d7bf0786-8218-4d2b-b41b-ef97b56214a0'>Fanatics - Software Engineer # 5244</a></h5> 
 <p><span class="badge badge-light">India, Hyderabad</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -381,7 +381,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p>Jul 20, 2019 ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twilio/jobs/1788666'>Job Application for Software Engineer I - Technical Operations at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1788666'>Job Application for Software Engineer I - Technical Operations at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Twilio is growing rapidly and seeking a Software Engineer to integrate and 
 automate systems within the ITIL framework. This role will either assist cross?...</p>
@@ -409,7 +409,7 @@ modern?...</p>
 <p>5 days ago ... We're looking for software engineering professionals with deep strengths in 
 developing highly performant, highly available software written in modern C++.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cruise/jobs/1732761?gh_jid=1732761'>Job Application for Senior Software Engineer - Robotics Simulation ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cruise/jobs/1732761?gh_jid=1732761'>Job Application for Senior Software Engineer - Robotics Simulation ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Our Simulation team is responsible for building all of the tools we need to test 
 and validate our autonomous vehicles performance and behavior before they go
@@ -446,7 +446,7 @@ Angular) in Hamburg (published: 24.05.2019). Apply now or check the other?...</p
 Trading Systems (Java, JavaScript) in Z?rich (published: 03.04.2019). Apply now 
 or?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/j2-global/job/o8Jvafwg'>J2 Global Careers - Senior Software Engineer - Java</a></h5> 
+<h5><a href='https://jobs.jobvite.com/j2-global/job/o8Jvafwg'>J2 Global Careers - Senior Software Engineer - Java</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -466,7 +466,7 @@ or?...</p>
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
